haskell/Guestfs.hs

{- libguestfs generated file
   WARNING: THIS FILE IS GENERATED FROM THE FOLLOWING FILES:
            generator/haskell.ml
            and from the code in the generator/ subdirectory.
   ANY CHANGES YOU MAKE TO THIS FILE WILL BE LOST.
  
   Copyright (C) 2009-2016 Red Hat Inc.
  
   This library is free software; you can redistribute it and/or
   modify it under the terms of the GNU Lesser General Public
   License as published by the Free Software Foundation; either
   version 2 of the License, or (at your option) any later version.
  
   This library is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
   Lesser General Public License for more details.
  
   You should have received a copy of the GNU Lesser General Public
   License along with this library; if not, write to the Free Software
   Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
-}

{-# LANGUAGE ForeignFunctionInterface #-}

module Guestfs (
  create,
  acl_delete_def_file,
  acl_get_file,
  acl_set_file,
  add_cdrom,
  add_drive_ro,
  add_drive_ro_with_if,
  add_drive_with_if,
  aug_clear,
  aug_close,
  aug_defvar,
  aug_get,
  aug_init,
  aug_insert,
  aug_label,
  aug_load,
  aug_ls,
  aug_match,
  aug_mv,
  aug_rm,
  aug_save,
  aug_set,
  aug_setm,
  available,
  available_all_groups,
  base64_in,
  base64_out,
  blkdiscard,
  blkdiscardzeroes,
  blkid,
  blockdev_flushbufs,
  blockdev_getbsz,
  blockdev_getro,
  blockdev_getsize64,
  blockdev_getss,
  blockdev_getsz,
  blockdev_rereadpt,
  blockdev_setbsz,
  blockdev_setra,
  blockdev_setro,
  blockdev_setrw,
  btrfs_balance_cancel,
  btrfs_balance_pause,
  btrfs_balance_resume,
  btrfs_device_add,
  btrfs_device_delete,
  btrfs_filesystem_balance,
  btrfs_filesystem_sync,
  btrfs_qgroup_assign,
  btrfs_qgroup_create,
  btrfs_qgroup_destroy,
  btrfs_qgroup_limit,
  btrfs_qgroup_remove,
  btrfs_quota_enable,
  btrfs_quota_rescan,
  btrfs_replace,
  btrfs_rescue_chunk_recover,
  btrfs_rescue_super_recover,
  btrfs_scrub_cancel,
  btrfs_scrub_resume,
  btrfs_scrub_start,
  btrfs_set_seeding,
  btrfs_subvolume_delete,
  btrfs_subvolume_get_default,
  btrfs_subvolume_set_default,
  btrfs_subvolume_show,
  btrfstune_enable_extended_inode_refs,
  btrfstune_enable_skinny_metadata_extent_refs,
  btrfstune_seeding,
  c_pointer,
  canonical_device_name,
  cap_get_file,
  cap_set_file,
  case_sensitive_path,
  cat,
  checksum,
  checksum_device,
  checksums_out,
  chmod,
  chown,
  clear_backend_setting,
  command,
  command_lines,
  config,
  copy_in,
  copy_out,
  copy_size,
  cp,
  cp_a,
  cp_r,
  dd,
  debug,
  debug_drives,
  debug_upload,
  device_index,
  df,
  df_h,
  disk_format,
  disk_has_backing_file,
  disk_virtual_size,
  dmesg,
  download,
  download_offset,
  drop_caches,
  du,
  e2fsck_f,
  echo_daemon,
  egrep,
  egrepi,
  equal,
  exists,
  extlinux,
  fallocate,
  fallocate64,
  feature_available,
  fgrep,
  fgrepi,
  file,
  file_architecture,
  filesize,
  filesystem_available,
  fill,
  fill_dir,
  fill_pattern,
  find,
  find0,
  findfs_label,
  findfs_uuid,
  fsck,
  get_attach_method,
  get_autosync,
  get_backend,
  get_backend_setting,
  get_backend_settings,
  get_cachedir,
  get_direct,
  get_e2attrs,
  get_e2generation,
  get_e2label,
  get_e2uuid,
  get_hv,
  get_identifier,
  get_libvirt_requested_credential_challenge,
  get_libvirt_requested_credential_defresult,
  get_libvirt_requested_credential_prompt,
  get_libvirt_requested_credentials,
  get_memsize,
  get_network,
  get_path,
  get_pgroup,
  get_pid,
  get_program,
  get_qemu,
  get_recovery_proc,
  get_selinux,
  get_smp,
  get_state,
  get_tmpdir,
  get_trace,
  get_umask,
  get_verbose,
  getcon,
  glob_expand,
  grepi,
  grub_install,
  head,
  head_n,
  hexdump,
  hivex_close,
  hivex_commit,
  hivex_node_add_child,
  hivex_node_delete_child,
  hivex_node_get_child,
  hivex_node_get_value,
  hivex_node_name,
  hivex_node_parent,
  hivex_node_set_value,
  hivex_root,
  hivex_value_key,
  hivex_value_type,
  hivex_value_utf8,
  initrd_list,
  inotify_add_watch,
  inotify_close,
  inotify_files,
  inotify_init,
  inotify_rm_watch,
  inspect_get_arch,
  inspect_get_distro,
  inspect_get_drive_mappings,
  inspect_get_filesystems,
  inspect_get_format,
  inspect_get_hostname,
  inspect_get_major_version,
  inspect_get_minor_version,
  inspect_get_mountpoints,
  inspect_get_package_format,
  inspect_get_package_management,
  inspect_get_product_name,
  inspect_get_product_variant,
  inspect_get_roots,
  inspect_get_type,
  inspect_get_windows_current_control_set,
  inspect_get_windows_systemroot,
  inspect_is_live,
  inspect_is_multipart,
  inspect_is_netinst,
  inspect_os,
  internal_exit,
  internal_test_close_output,
  internal_test_rbool,
  internal_test_rboolerr,
  internal_test_rconststring,
  internal_test_rconststringerr,
  internal_test_rhashtable,
  internal_test_rhashtableerr,
  internal_test_rint,
  internal_test_rint64,
  internal_test_rint64err,
  internal_test_rinterr,
  internal_test_rstring,
  internal_test_rstringerr,
  internal_test_rstringlist,
  internal_test_rstringlisterr,
  internal_test_set_output,
  is_busy,
  is_config,
  is_launching,
  is_lv,
  is_ready,
  is_symlink,
  is_whole_device,
  is_zero,
  is_zero_device,
  journal_close,
  journal_get_data_threshold,
  journal_get_realtime_usec,
  journal_next,
  journal_open,
  journal_set_data_threshold,
  journal_skip,
  kill_subprocess,
  launch,
  lchown,
  ldmtool_create_all,
  ldmtool_diskgroup_disks,
  ldmtool_diskgroup_name,
  ldmtool_diskgroup_volumes,
  ldmtool_remove_all,
  ldmtool_scan,
  ldmtool_scan_devices,
  ldmtool_volume_hint,
  ldmtool_volume_partitions,
  ldmtool_volume_type,
  list_9p,
  list_devices,
  list_disk_labels,
  list_dm_devices,
  list_filesystems,
  list_ldm_partitions,
  list_ldm_volumes,
  list_md_devices,
  list_partitions,
  ll,
  llz,
  ln,
  ln_f,
  ln_s,
  ln_sf,
  lremovexattr,
  ls,
  ls0,
  lsetxattr,
  luks_add_key,
  luks_close,
  luks_format,
  luks_format_cipher,
  luks_kill_slot,
  luks_open,
  luks_open_ro,
  lvcreate,
  lvcreate_free,
  lvm_canonical_lv_name,
  lvm_clear_filter,
  lvm_remove_all,
  lvm_set_filter,
  lvremove,
  lvrename,
  lvresize,
  lvresize_free,
  lvs,
  lvuuid,
  max_disks,
  md_detail,
  md_stop,
  mkdir,
  mkdir_mode,
  mkdir_p,
  mkdtemp,
  mke2fs_J,
  mke2fs_JL,
  mke2fs_JU,
  mke2journal,
  mke2journal_L,
  mke2journal_U,
  mkfifo,
  mkfs_b,
  mklost_and_found,
  mkmountpoint,
  mknod,
  mknod_b,
  mknod_c,
  mkswap_L,
  mkswap_U,
  mkswap_file,
  modprobe,
  mount,
  mount_local_run,
  mount_loop,
  mount_options,
  mount_ro,
  mount_vfs,
  mountpoints,
  mounts,
  mv,
  nr_devices,
  ntfs_3g_probe,
  ntfsclone_in,
  ntfsresize_size,
  parse_environment,
  parse_environment_list,
  part_add,
  part_del,
  part_disk,
  part_get_bootable,
  part_get_gpt_guid,
  part_get_gpt_type,
  part_get_mbr_id,
  part_get_mbr_part_type,
  part_get_name,
  part_get_parttype,
  part_init,
  part_set_bootable,
  part_set_gpt_guid,
  part_set_gpt_type,
  part_set_mbr_id,
  part_set_name,
  part_to_dev,
  part_to_partnum,
  ping_daemon,
  pvchange_uuid,
  pvchange_uuid_all,
  pvcreate,
  pvremove,
  pvresize,
  pvresize_size,
  pvs,
  pvuuid,
  pwrite,
  pwrite_device,
  read_lines,
  readlink,
  readlinklist,
  realpath,
  remove_drive,
  removexattr,
  rename,
  resize2fs,
  resize2fs_M,
  resize2fs_size,
  rm,
  rm_f,
  rm_rf,
  rmdir,
  rmmountpoint,
  scrub_device,
  scrub_file,
  scrub_freespace,
  set_append,
  set_attach_method,
  set_autosync,
  set_backend,
  set_backend_setting,
  set_backend_settings,
  set_cachedir,
  set_direct,
  set_e2generation,
  set_e2label,
  set_e2uuid,
  set_hv,
  set_identifier,
  set_label,
  set_libvirt_requested_credential,
  set_libvirt_supported_credentials,
  set_memsize,
  set_network,
  set_path,
  set_pgroup,
  set_program,
  set_qemu,
  set_recovery_proc,
  set_selinux,
  set_smp,
  set_tmpdir,
  set_trace,
  set_uuid,
  set_uuid_random,
  set_verbose,
  setcon,
  setxattr,
  sfdisk,
  sfdiskM,
  sfdisk_N,
  sfdisk_disk_geometry,
  sfdisk_kernel_geometry,
  sfdisk_l,
  sh,
  sh_lines,
  shutdown,
  sleep,
  strings,
  strings_e,
  swapoff_device,
  swapoff_file,
  swapoff_label,
  swapoff_uuid,
  swapon_device,
  swapon_file,
  swapon_label,
  swapon_uuid,
  sync,
  tail,
  tail_n,
  tgz_in,
  tgz_out,
  touch,
  truncate,
  truncate_size,
  tune2fs_l,
  txz_in,
  txz_out,
  umask,
  umount_all,
  upload,
  upload_offset,
  user_cancel,
  utimens,
  vfs_label,
  vfs_minimum_size,
  vfs_type,
  vfs_uuid,
  vg_activate,
  vg_activate_all,
  vgchange_uuid,
  vgchange_uuid_all,
  vgcreate,
  vglvuuids,
  vgpvuuids,
  vgremove,
  vgrename,
  vgs,
  vgscan,
  vguuid,
  wait_ready,
  wc_c,
  wc_l,
  wc_w,
  wipefs,
  write,
  write_append,
  write_file,
  zegrep,
  zegrepi,
  zero,
  zero_device,
  zero_free_space,
  zerofree,
  zfgrep,
  zfgrepi,
  zfile,
  zgrep,
  zgrepi
  ) where

-- Unfortunately some symbols duplicate ones already present
-- in Prelude.  We don't know which, so we hard-code a list
-- here.
import Prelude hiding (head, tail, truncate)

import Foreign
import Foreign.C
import Foreign.C.Types
import System.IO
import Control.Exception
import Data.Typeable

data GuestfsS = GuestfsS            -- represents the opaque C struct
type GuestfsP = Ptr GuestfsS        -- guestfs_h *
type GuestfsH = ForeignPtr GuestfsS -- guestfs_h * with attached finalizer

foreign import ccall unsafe "guestfs.h guestfs_create" c_create
  :: IO GuestfsP
foreign import ccall unsafe "guestfs.h &guestfs_close" c_close
  :: FunPtr (GuestfsP -> IO ())
foreign import ccall unsafe "guestfs.h guestfs_set_error_handler" c_set_error_handler
  :: GuestfsP -> Ptr CInt -> Ptr CInt -> IO ()

create :: IO GuestfsH
create = do
  p <- c_create
  c_set_error_handler p nullPtr nullPtr
  h <- newForeignPtr c_close p
  return h

foreign import ccall unsafe "guestfs.h guestfs_last_error" c_last_error
  :: GuestfsP -> IO CString

-- last_error :: GuestfsH -> IO (Maybe String)
-- last_error h = do
--   str <- withForeignPtr h (\p -> c_last_error p)
--   maybePeek peekCString str

last_error :: GuestfsH -> IO String
last_error h = do
  str <- withForeignPtr h (\p -> c_last_error p)
  if (str == nullPtr)
    then return "no error"
    else peekCString str

assocListOfHashtable :: Eq a => [a] -> [(a,a)]
assocListOfHashtable [] = []
assocListOfHashtable [a] =
  fail "RHashtable returned an odd number of elements"
assocListOfHashtable (a:b:rest) = (a,b) : assocListOfHashtable rest

foreign import ccall unsafe "guestfs.h guestfs_acl_delete_def_file" c_acl_delete_def_file
  :: GuestfsP -> CString -> IO CInt

acl_delete_def_file :: GuestfsH -> String -> IO ()
acl_delete_def_file h dir = do
  r <- withCString dir $ \dir -> withForeignPtr h (\p -> c_acl_delete_def_file p dir)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_acl_get_file" c_acl_get_file
  :: GuestfsP -> CString -> CString -> IO CString

acl_get_file :: GuestfsH -> String -> String -> IO String
acl_get_file h path acltype = do
  r <- withCString path $ \path -> withCString acltype $ \acltype -> withForeignPtr h (\p -> c_acl_get_file p path acltype)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_acl_set_file" c_acl_set_file
  :: GuestfsP -> CString -> CString -> CString -> IO CInt

acl_set_file :: GuestfsH -> String -> String -> String -> IO ()
acl_set_file h path acltype acl = do
  r <- withCString path $ \path -> withCString acltype $ \acltype -> withCString acl $ \acl -> withForeignPtr h (\p -> c_acl_set_file p path acltype acl)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()
